I created my search page

--- a/views/about/index.html
+++ b/views/about/index.html
@@ -3,6 +3,6 @@
 {% block content %}
     <div class = "page-header">
         <h1>About</h1>
-        <p class="lead">(TODO: Provide a summary about streams)</p>
-    </div>
+        <p class="lead">My name is Raven Conyers and I am an inspiring Software Developer. All my life I have been surrounded by technology. My grandpa builds computers and helps people when they have comupter problems. Growing up watching him do these things made me interested in the world of technology. I wanted to know how things worked and why they worked as they did. The first thing that I had once decided that I wanted to do when I became interested in technology was to be a website developer. I tried to learn on my own but it became to difficult. I need a teacher to be there for me to truly understand a topic and with everything that I had to do in school it seemed nearly impossible so I gave up on the dream. I had then decided to go into the field of nursing with the intent of being able to help people. However, I was then introduced to NYOT and it sparked an interet that had been dorment in me for a while. I now want to become a software developer and be able to make my own websites.</p>
+        <img src="https://www.facebook.com/photo.php?fbid=1177886845577346&l=c70d23e9c3"></img>
 {% endblock %}
