--- a/views/search/index.html
+++ b/views/search/index.html
@@ -8,10 +8,17 @@
     <form class="form-inline">
         <div class="form-group">
             <label class="sr-only" for="hashtag">Hashtag</label>
-            <input type="text" class="form-control" id="hashtag" placeholder="#nyc">
+            <input type="text" class="form-control" id="hashtag" placeholder="#nyot">
         </div>
         <button type="submit" class="btn btn-default">Search</button>
     </form>
+    
+    <h4>Search Results</h4>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            Basic Panel
+        </div>
+    </div>
     
 </div>
 {% endblock %}
