Adding CSS and HTNL

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -4,7 +4,7 @@
     <h1 class="text-center"><strong>{{ title }}</strong><small> Twitter Hashtag Search Engine </small> </h1>
       <p class="text-center">Welcome to {{ title | escape }}</p>
     <div class="container">
-    <h3> What you can expect from this app!</h3>
+    <h3> What you can expect from this website!</h3>
     <p class="lead"> Streams was designed to make it easier for Twitter users to search up hashtags and get results instantly. While it may seem like a simple application there was a lot of coding that took place in order to make it possible for our users to search up Twitter hashtags. While using this website one can expect to be able to find out how many people are susing a certain hashtag. For example,   </p>
     </div>
   
